# gpu-ai-inference-server

./: .gitignore  README.md  docker-compose.gpu.yml  docker-compose.yml  go.mod  go.sum
client/: test_client.py
docker/: Dockerfile  Dockerfile.gpu
docs/: api.md  design.md  design_diagram.md  run_server.ipynb
inference_engine/: CMakeLists.txt
inference_engine/binding/: inference_binding.go
inference_engine/include/: cuda_utils.h  inference_bridge.h  inference_manager.h  model.h  model_repository.h
inference_engine/src/: cuda_utils.cu  inference_bridge.cpp  inference_manager.cpp  model.cpp  model_repository.cpp
inference_engine/test/: cuda_test.cpp
models/densenet_onnx/1/: config.json
models/simple_model/1/: config.json  model.onnx
models/test_model/1/: config.json  model.onnx
scripts/: build_inference_engine.sh  build_server.py  colab_build_server.py  colab_test.py  create-test-model.py  gpu_check.sh  run_gpu_build.sh  run_server.sh  setup-onnxruntime.sh  test_server.py
server/: main.go
test/: onnx-test.cpp
